--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@types/react": "^17.0.6",
     "@types/react-dom": "^17.0.5",
     "framer-motion": "^4",
+    "query-string": "^7.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "swr": "^0.5.6",
     "typescript": "^4.2.4",
     "web-vitals": "^1.1.2"
   },
