--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "@testing-library/user-event": "^12.8.3",
     "@types/jest": "^26.0.23",
     "@types/node": "^12.20.13",
+    "@types/ramda": "^0.27.40",
     "@types/react": "^17.0.6",
     "@types/react-dom": "^17.0.5",
     "framer-motion": "^4",
     "query-string": "^7.0.0",
+    "ramda": "^0.27.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
